examples/test/testpolicy13512.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13512
  namespace: namespace56
spec:
  podSelector:
    matchLabels:
      key5: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value26
          key27: value19
      podSelector:
        matchLabels:
          key24: value46
          key22: value45
          key37: value30
